--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "react-tooltip-lib",
   "version": "1.0.0",
-  "description": "A simple UI library for light-weight, highly customizable React Tooltip.",
-  "author": "gaurav verma",
+  "description": "",
+  "author": "gauravverma029",
   "license": "MIT",
   "repository": "https://github.com/gauravverma029/react-tooltip-lib",
   "main": "dist/index.js",
@@ -19,7 +19,10 @@
     "start": "rollup -c -w",
     "prepare": "npm run build",
     "predeploy": "cd example && npm install && npm run build",
-    "deploy": "gh-pages -d example/build"
+    "deploy": "gh-pages -d example/build",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook -o docs",
+    "deploy-storybook": "storybook-to-ghpages --existing-output-dir=docs"
   },
   "peerDependencies": {
     "prop-types": "^15.5.4",
@@ -27,9 +30,15 @@
     "react-dom": "^15.0.0 || ^16.0.0"
   },
   "devDependencies": {
+    "@storybook/addon-actions": "^4.1.11",
+    "@storybook/addon-links": "^4.1.11",
+    "@storybook/addons": "^4.1.11",
+    "@storybook/react": "^4.1.13",
+    "@storybook/storybook-deployer": "^2.8.1",
     "@svgr/rollup": "^2.4.1",
     "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.5",
+    "babel-loader": "^7.1.5",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
@@ -45,7 +54,7 @@
     "eslint-plugin-standard": "^3.1.0",
     "gh-pages": "^1.2.0",
     "react": "^16.4.1",
-    "react-dom": "^16.4.1",
+    "react-dom": "^16.7.0",
     "react-scripts": "^1.1.4",
     "rollup": "^0.64.1",
     "rollup-plugin-babel": "^3.0.7",
@@ -53,9 +62,17 @@
     "rollup-plugin-node-resolve": "^3.3.0",
     "rollup-plugin-peer-deps-external": "^2.2.0",
     "rollup-plugin-postcss": "^1.6.2",
-    "rollup-plugin-url": "^1.4.0"
+    "rollup-plugin-replace": "^2.1.0",
+    "rollup-plugin-url": "^1.4.0",
+    "storybook-readme": "^4.0.5"
   },
   "files": [
     "dist"
-  ]
+  ],
+  "dependencies": {
+    "react-popper": "^0.10.2",
+    "react-portal": "^4.2.0",
+    "styled-components": "^4.1.3",
+    "styled-system": "^3.2.1"
+  }
 }
